crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_drop_single.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | drop message\")"
---
SELECT * EXCLUDE ("message")
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
