crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_eventstats_basic.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | eventstats avg(duration) as avg_duration by service\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT *, AVG("duration") OVER (PARTITION BY "service") AS "avg_duration"
FROM "_s0"
