crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_eventstats_multi_agg.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | eventstats avg(duration) as avg_dur, count() as total by service\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT COLUMNS(c -> c NOT IN ('avg_dur', 'total')), AVG("duration") OVER (PARTITION BY "service") AS "avg_dur", COUNT(*) OVER (PARTITION BY "service") AS "total"
FROM "_s0"
