crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_eventstats_no_by.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | eventstats count()\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT COLUMNS(c -> translate(c, 'ABCDEFGHIJKLMNOPQRSTUVWXYZ', 'abcdefghijklmnopqrstuvwxyz') NOT IN ('count')), COUNT(*) OVER () AS "count"
FROM "_s0"
