crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_eventstats_then_where.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | eventstats avg(duration) as avg_dur by service | where duration > avg_dur\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
), _s1 AS (
  SELECT COLUMNS(c -> translate(c, 'ABCDEFGHIJKLMNOPQRSTUVWXYZ', 'abcdefghijklmnopqrstuvwxyz') NOT IN ('avg_dur')), AVG("duration") OVER (PARTITION BY "service") AS "avg_dur"
  FROM "_s0"
)
SELECT *
FROM "_s1"
WHERE ("duration" > "avg_dur")
