crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_extract_default_field.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | extract \"(?P<method>[A-Z]+) (?P<path>/[^ ]+)\"\"#)"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT *, nullif(regexp_extract("message", ?, 1), '') AS "method", nullif(regexp_extract("message", ?, 2), '') AS "path"
FROM "_s0"
---
params:
  0: '(?P<method>[A-Z]+) (?P<path>/[^ ]+)'
  1: '(?P<method>[A-Z]+) (?P<path>/[^ ]+)'
