crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_extract_kv_with_search_prefix.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx | extract kv from message | head 5\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "service" = ?
---
params:
  0: 'nginx'
---
rust_stages: 2
  Extract(ExtractStage { mode: KeyValue { separator: '=' }, source_field: Some("message") })
  Limit(LimitStage { count: 5 })
